--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,7 @@
+body {
+  font-family: monospace;
+}
+
 div {
   padding-left: 2px;
 }
@@ -32,6 +36,10 @@ div {
 }
 
 .typeUnionItem {
+  display: flex;
+}
+
+.typeParametrizedGeneric {
   display: flex;
 }
 
