--- a/viewer/styles.scss
+++ b/viewer/styles.scss
@@ -26,6 +26,19 @@ body {
   }
 }
 
+.loader {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  font-size: 14px;
+}
+
 .toolbar {
   display: flex;
   padding: $space;
